--- a/resources/sass/front.scss
+++ b/resources/sass/front.scss
@@ -1,5 +1,5 @@
 body {
-  color: #000
+  color: #000;
 }
 
 .haeder {
@@ -15,7 +15,7 @@ body {
     width: 350px;
     .image{
       img{
-        width: 100%
+        width: 100%;
       }
     }
     .title{
@@ -52,6 +52,6 @@ body {
     img {
       width: 250px;
     }
-  }
-  
+   }
+  }  
 }
